# recipes

./: .gitignore  README.md  cheatsheet-cpp-python-perl.odt
c++/: .gitignore  cmake-cheatsheet.odt  cpp-libs.md
c++/cpp11/: CMakeLists.txt  main.cpp
c++/qt/: build-qt.ipynb  build-qt.md  translator.md
c++/qt/menu-action/: QMenu-abortToShow.md
c++/qt/together/: examples.md
c++/qt/ui/: css-image-border
c++/qt/webengine/: QtWebEngine.md  contextMenu.md  widget.md
c++/qt/windows/: registry
c++/rule/: IoC.md  类型擦除.md  跨平台.md
cppcode/: CMakeLists.txt
cppcode/boost/: CMakeLists.txt
cppcode/boost/asio/: CMakeLists.txt
cppcode/stdcpp/: CMakeLists.txt  weak_reference.cpp
javascript/: editor.md
ncbi/: .gitignore  SRA-toolkit.py.ipynb  biopython.ipynb  data-tools.ipynb  fastqio.py  hisat2-samtools-bcftools.ipynb  ides.ipynb  rec-pyfaidx.ipynb
ncbi/.ipynb_checkpoints/: SRA-toolkit.py-checkpoint.ipynb
ncbi/capp-seq/: CAPP-seq中的生物信息学方法.ipynb  CAPP-seq中的统计方法.ipynb  reference.md  selector.bed  selector.py.ipynb  数据量与并行计算.ipynb
python/: rec-jupyter.ipynb  rec-python-coroutine.ipynb  rec-python-dict.ipynb  rec-python-fun.ipynb  rec-python-generator.ipynb  rec-python-listcomp.ipynb  rec-python-re.ipynb  rec-python-with.ipynb
scala/: scala-note.md
